--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -13,7 +13,7 @@ dependencies {
     compile('commons-io:commons-io:2.4')
     
     // etc
-	compile('com.epapyrus.gateway:sdp-commons:7.3.5.1')    
+	compile('io.manasobi:manasobi-utils:1.0.0')    
     compile('joda-time:joda-time:2.6')
     compile('com.google.guava:guava:18.0')
 	compile("org.jasypt:jasypt-spring31:1.9.0")
